# Emotion-Classifier

./: main.py  modelsIndex.py  myModels.py  preprocess.py  pyproject.toml
.spyproject/config/: workspace.ini
chromextension/: background.js  manifest.json  popup.css  popup.html  popup.js
static/: style.css
templates/: index.html  index.js
