[tool.poetry]
name = "repl_python3_Statement-Classifier"
version = "0.1.0"
description = ""
authors = ["ShuhaibMehri <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"
sklearn = "^0.0"
tensorflow = "^2.6.0"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
